--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
@@ -35,15 +36,20 @@
         <ul class="header-address-list list">
           <li class="header-address-item"><a class="header-address-link link"
               href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="header-address-item"><a class="header-address-link link" href="tel:+110001111111">+11 (000)
+          <li class="header-address-item"><a class="header-address-link link" href="tel:+110001111111">+11
+              (000)
               111-11-11</a>
           </li>
         </ul>
       </address>
+      <button type="button" class="mob-open-btn js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg width="32" height="22" class="mob-open-icon" aria-label="Menu">
+          <use href="./images/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
     </div>
   </header>
 
-  <!-- Main -->
   <main>
 
     <!-- Hero -->
@@ -108,22 +114,29 @@
       <div class="container">
         <h2 class="wawd-title">What are we doing</h2>
         <ul class="wawd-list list">
-          <li class="wawd-list-item"><img class="wawd-item-img" src="./images/computer.jpg" alt="computer" width="360">
+          <li class="wawd-list-item"><img class="wawd-item-img"
+              srcset="./images/computer-2x.jpg 2x, ./images/computer-3x.jpg 3x" src="./images/computer.jpg"
+              alt="computer" width="360">
           </li>
-          <li class="wawd-list-item"><img class="wawd-item-img" src="./images/slides_screen.jpg" alt="slides_screen"
-              width="360">
+          <li class="wawd-list-item"><img class="wawd-item-img"
+              srcset="./images/slides_screen-2x.jpg 2x, ./images/slides_screen-3x.jpg 3x"
+              src="./images/slides_screen.jpg" alt="slides_screen" width="360">
           </li>
-          <li class="wawd-list-item"><img class="wawd-item-img" src="./images/phone.jpg" alt="phone" width="360"></li>
+          <li class="wawd-list-item"><img class="wawd-item-img"
+              srcset="./images/phone-2x.jpg 2x, ./images/phone-3x.jpg 3x" src="./images/phone.jpg" alt="phone"
+              width="360"></li>
         </ul>
       </div>
     </section>
 
     <!-- Team -->
     <section class="team">
-      <div class="container">
+      <div class="container team-container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list list">
-          <li class="team-item"><img class="team-item-img" src="./images/employee1.jpg" alt="employee1" width="264">
+          <li class="team-item"><img class="team-item-img"
+              srcset="./images/employee1-2x.jpg 2x, ./images/employee1-3x.jpg 3x" src="./images/employee1.jpg"
+              alt="employee1" width="264">
             <div class="team-item-wrap">
               <h3 class="team-item-title">Mark Guerrero</h3>
               <p class="team-item-text">Product Designer</p>
@@ -159,7 +172,9 @@
               </ul>
             </div>
           </li>
-          <li class="team-item"><img class="team-item-img" src="./images/employee2.jpg" alt="employee2" width="264">
+          <li class="team-item"><img class="team-item-img"
+              srcset="./images/employee2-2x.jpg 2x, ./images/employee2-3x.jpg 3x" src="./images/employee2.jpg"
+              alt="employee2" width="264">
             <div class="team-item-wrap">
               <h3 class="team-item-title">Tom Ford</h3>
               <p class="team-item-text">Frontend Developer</p>
@@ -195,7 +210,9 @@
               </ul>
             </div>
           </li>
-          <li class="team-item"><img class="team-item-img" src="./images/employee3.jpg" alt="employee3" width="264">
+          <li class="team-item"><img class="team-item-img"
+              srcset="./images/employee3-2x.jpg 2x, ./images/employee3-3x.jpg 3x" src="./images/employee3.jpg"
+              alt="employee3" width="264">
             <div class="team-item-wrap">
               <h3 class="team-item-title">Camila Garcia</h3>
               <p class="team-item-text">Marketing</p>
@@ -231,7 +248,9 @@
               </ul>
             </div>
           </li>
-          <li class="team-item"><img class="team-item-img" src="./images/employee4.jpg" alt="employee4" width="264">
+          <li class="team-item"><img class="team-item-img"
+              srcset="./images/employee4-2x.jpg 2x, ./images/employee4-3x.jpg 3x" src="./images/employee4.jpg"
+              alt="employee4" width="264">
             <div class="team-item-wrap">
               <h3 class="team-item-title">Daniel Wilson</h3>
               <p class="team-item-text">UI Designer</p>
@@ -273,7 +292,7 @@
 
     <!-- Customers -->
     <section class="customers">
-      <div class="container">
+      <div class="container customers-container">
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-list list">
           <li class="customers-item">
@@ -440,7 +459,72 @@
       </form>
     </div>
   </div>
+
+  <!-- Mob Menu -->
+  <div class="mob-container js-menu-container" id="mobile-menu">
+    <div><button class="mob-close-btn js-close-menu">
+        <svg width="8" height="8">
+          <use class="mob-icon-close" href="./images/icons.svg#icon-close-btn"></use>
+        </svg>
+      </button>
+      <ul class="mob-header-list list">
+        <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./index.html">Studio</a>
+        </li>
+        <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active" href="">Contacts</a></li>
+      </ul>
+      </nav>
+    </div>
+    <div>
+      <address class="mob-header-address">
+        <ul class="mob-header-address-list list">
+          <li class="mob-header-phone">
+            <a class="mob-header-phone-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+          <li class="mob-header-email">
+            <a class="mob-header-email-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+        </ul>
+      </address>
+      <ul class="mob-header-sn-list list">
+        <li class="mob-header-sn-item">
+          <a href="" class="header-sn-link link">
+            <svg width="24" height="24" class="header-sn-icon">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mob-header-sn-item">
+          <a href="" class="header-sn-link link">
+            <svg width="24" height="24" class="header-sn-icon">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mob-header-sn-item">
+          <a href="" class="header-sn-link link">
+            <svg width="24" height="24" class="header-sn-icon">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mob-header-sn-item">
+          <a href="" class="header-sn-link link">
+            <svg width="24" height="24" class="header-sn-icon">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
   <script src="./js/modal.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+  <script defer src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
