--- a/portfolio.html
+++ b/portfolio.html
@@ -295,20 +295,23 @@
 
     <!-- Mob Menu -->
     <div class="mob-container js-menu-container" id="mobile-menu">
-        <div><button class="mob-close-btn js-close-menu">
-                <svg width="8" height="8">
-                    <use class="mob-icon-close" href="./images/icons.svg#icon-close-btn"></use>
-                </svg>
-            </button>
-            <ul class="mob-header-list list">
-                <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./index.html">Studio</a>
-                </li>
-                <li class="mob-header-list-item"><a class="mob-header-list-link link"
-                        href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active" href="">Contacts</a>
-                </li>
-            </ul>
+        <div>
+            <nav>
+                <button class="mob-close-btn js-close-menu">
+                    <svg width="8" height="8">
+                        <use class="mob-icon-close" href="./images/icons.svg#icon-close-btn"></use>
+                    </svg>
+                </button>
+                <ul class="mob-header-list list">
+                    <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="mob-header-list-item"><a class="mob-header-list-link link"
+                            href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active"
+                            href="">Contacts</a>
+                    </li>
+                </ul>
             </nav>
         </div>
         <div>
