--- a/portfolio.html
+++ b/portfolio.html
@@ -70,8 +70,16 @@
                     <li class="portfolio-item">
                         <a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio1.jpg" alt="portfolio1"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio1-mob.jpg 1x, ./images/portfolio1-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio1-tab.jpg 1x, ./images/portfolio1-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio1.jpg 1x, ./images/portfolio1-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio1.jpg" alt="portfolio1"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -89,8 +97,16 @@
                     <li class="portfolio-item">
                         <a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio2.jpg" alt="portfolio2"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio2-mob.jpg 1x, ./images/portfolio2-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio2-tab.jpg 1x, ./images/portfolio2-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio2.jpg 1x, ./images/portfolio2-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio2.jpg" alt="portfolio2"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -107,8 +123,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio3.jpg" alt="portfolio3"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio3-mob.jpg 1x, ./images/portfolio3-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio3-tab.jpg 1x, ./images/portfolio3-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio3.jpg 1x, ./images/portfolio3-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio3.jpg" alt="portfolio3"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -125,8 +149,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio4.jpg" alt="portfolio4"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio4-mob.jpg 1x, ./images/portfolio4-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio4-tab.jpg 1x, ./images/portfolio4-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio4.jpg 1x, ./images/portfolio4-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio4.jpg" alt="portfolio4"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -143,8 +175,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio5.jpg" alt="portfolio5"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio5-mob.jpg 1x, ./images/portfolio5-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio5-tab.jpg 1x, ./images/portfolio5-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio5.jpg 1x, ./images/portfolio5-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio5.jpg" alt="portfolio5"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -161,8 +201,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio6.jpg" alt="portfolio6"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio6-mob.jpg 1x, ./images/portfolio6-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio6-tab.jpg 1x, ./images/portfolio6-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio6.jpg 1x, ./images/portfolio6-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio6.jpg" alt="portfolio6"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -179,8 +227,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio7.jpg" alt="portfolio7"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio7-mob.jpg 1x, ./images/portfolio7-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio7-tab.jpg 1x, ./images/portfolio7-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio7.jpg 1x, ./images/portfolio7-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio7.jpg" alt="portfolio7"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -197,8 +253,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio8.jpg" alt="portfolio8"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio8-mob.jpg 1x, ./images/portfolio8-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio8-tab.jpg 1x, ./images/portfolio8-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio8.jpg 1x, ./images/portfolio8-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio8.jpg" alt="portfolio8"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
@@ -215,8 +279,16 @@
                     </li>
                     <li class="portfolio-item"><a class="portfolio-item-link link" href="">
                             <div class="portfolio-cover-wrap">
-                                <img class="portfolio-item-img link" src="./images/portfolio9.jpg" alt="portfolio9"
-                                    width="360">
+                                <picture>
+                                    <source srcset="./images/portfolio9-mob.jpg 1x, ./images/portfolio9-mob-2x.jpg 2x"
+                                        media="(max-width: 767px)" />
+                                    <source srcset="./images/portfolio9-tab.jpg 1x, ./images/portfolio9-tab-2x.jpg 2x"
+                                        media="(max-width: 1199px)" />
+                                    <source srcset="./images/portfolio9.jpg 1x, ./images/portfolio9-2x.jpg 2x"
+                                        media="(min-width: 1200px)" />
+                                    <img class="portfolio-item-img link" src="./images/portfolio9.jpg" alt="portfolio9"
+                                        width="360">
+                                </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
                                         Concepts ·
