--- a/index.html
+++ b/index.html
@@ -470,11 +470,12 @@
           </svg>
         </button>
         <ul class="mob-header-list list">
-          <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./index.html">Studio</a>
+          <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active"
+              href="./index.html">Studio</a>
           </li>
           <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active" href="">Contacts</a></li>
+          <li class="mob-header-list-item"><a class="mob-header-list-link link" href="">Contacts</a></li>
         </ul>
       </nav>
     </div>
