--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                                     <source srcset="./images/portfolio1.jpg 1x, ./images/portfolio1-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio1.jpg" alt="portfolio1"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -105,7 +105,7 @@
                                     <source srcset="./images/portfolio2.jpg 1x, ./images/portfolio2-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio2.jpg" alt="portfolio2"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -131,7 +131,7 @@
                                     <source srcset="./images/portfolio3.jpg 1x, ./images/portfolio3-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio3.jpg" alt="portfolio3"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -157,7 +157,7 @@
                                     <source srcset="./images/portfolio4.jpg 1x, ./images/portfolio4-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio4.jpg" alt="portfolio4"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -183,7 +183,7 @@
                                     <source srcset="./images/portfolio5.jpg 1x, ./images/portfolio5-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio5.jpg" alt="portfolio5"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -209,7 +209,7 @@
                                     <source srcset="./images/portfolio6.jpg 1x, ./images/portfolio6-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio6.jpg" alt="portfolio6"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -235,7 +235,7 @@
                                     <source srcset="./images/portfolio7.jpg 1x, ./images/portfolio7-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio7.jpg" alt="portfolio7"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -261,7 +261,7 @@
                                     <source srcset="./images/portfolio8.jpg 1x, ./images/portfolio8-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio8.jpg" alt="portfolio8"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -287,7 +287,7 @@
                                     <source srcset="./images/portfolio9.jpg 1x, ./images/portfolio9-2x.jpg 2x"
                                         media="(min-width: 1200px)" />
                                     <img class="portfolio-item-img link" src="./images/portfolio9.jpg" alt="portfolio9"
-                                        width="360">
+                                        width="396">
                                 </picture>
                                 <div class="portfolio-cover-text-wrap">
                                     <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design
@@ -377,11 +377,10 @@
                 <ul class="mob-header-list list">
                     <li class="mob-header-list-item"><a class="mob-header-list-link link" href="./index.html">Studio</a>
                     </li>
-                    <li class="mob-header-list-item"><a class="mob-header-list-link link"
+                    <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active"
                             href="./portfolio.html">Portfolio</a>
                     </li>
-                    <li class="mob-header-list-item"><a class="mob-header-list-link link mob-active"
-                            href="">Contacts</a>
+                    <li class="mob-header-list-item"><a class="mob-header-list-link link" href="">Contacts</a>
                     </li>
                 </ul>
             </nav>
